fix a bug - vertical alignment of my-name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ header {
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     /* color settings */
     background-color: var(--dark);
     /* size settings */
